manifests/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    alpha.image.policy.openshift.io/resolve-names: "*"
    image.openshift.io/triggers: >-
      [{"from":{"kind":"ImageStreamTag","name":"dtwin-backend:staging","namespace":"dtwin"},"fieldPath":"spec.template.spec.containers[?(@.name==\"dtwin-backend\")].image","pause":"false"}]
    kompose.cmd: kompose convert
    kompose.version: 1.37.0 (fb0539e64)
  labels:
    io.kompose.service: backend
  name: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: backend
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.37.0 (fb0539e64)
      labels:
        io.kompose.service: backend
    spec:
      containers:
        - name: backend
          image: dtwin-backend:staging
          imagePullPolicy: Always
          ports:
            - containerPort: 5000
              protocol: TCP
