manifests/mcp-server-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.37.0 (fb0539e64)
  labels:
    io.kompose.service: mcp-server
  name: mcp-server
spec:
  ports:
    - name: "8000"
      port: 8000
      targetPort: 8000
  selector:
    io.kompose.service: mcp-server
