manifests/frontend-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: frontend-route
  namespace: dtwin
  labels:
    app: dtwin-frontend
    type: external
spec:
  host: dtwin.2.rahtiapp.fi
  port:
    targetPort: 8080
  to:
    kind: Service
    name: frontend
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
